[gd_scene load_steps=2 format=3 uid="uid://bqx8y7n2k3m5g"]

[ext_resource type="Script" path="res://BagCheckDialog.gd" id="1_bag_check_script"]

[node name="BagCheckDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bag_check_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="CardContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="ColorRect" parent="CardContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.2, 0.2, 0.95)

[node name="Border" type="ColorRect" parent="CardContainer"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.8, 0.8, 0.8, 0.6)

[node name="Title" type="Label" parent="CardContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Select a Club to Use for This Shot"
horizontal_alignment = 1

[node name="LeftCard" type="Button" parent="CardContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2(100, 60)
text = ""

[node name="RightCard" type="Button" parent="CardContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -30.0
offset_right = 120.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2(100, 60)
text = "" 